fix: :bug: differentiate colours in high contrast mode
Resolves #120

--- a/webshop_frontend/src/Components/utils/utils.css
+++ b/webshop_frontend/src/Components/utils/utils.css
@@ -7,7 +7,7 @@
   color: #5a5a5a;
   border: 5px solid;
   border-radius: 50%;
-  border-top-color: transparent;
+  border-top-color: Canvas;
   animation: rotate 1s linear infinite;
 }
 
